[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/props/Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://assets/Grape_Bullet.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/ControlTutorial.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 27.4591

[node name="Checkpoint" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0

[node name="SavePrompt" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 3, 15 )
tutorial_text = "Press  
to save"
tutorial_type = "save"

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Checkpoint_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
